# graphlex

./: .gitignore  FACTS_FEATURES.tex  PAPER_PLAN.md  README.md  RELATED_WORK.md  RELATED_WORK_NOTES.md  app.sh  pyproject.toml
demo/: README.md  app.py
docs/: README.md  graphlex-0.0.1-py3-none-any.whl  index.html
eval/: BENCHMARK_SUMMARY.md  CROSSDOMAIN_PLAN.md  CROSSDOMAIN_RESULTS.md  EDGE_TRACK_PLAN.md  FEATURE_SYNC_CHECKLIST.md  FUSION_SMOKE_PLAN.md  GNN_BASELINE_PLAN.md  KG_TRACK_PLAN.md  LABEL_CURVE_RESULTS.md  NODE_TRACK_PLAN.md  PILOT_RESULTS.md  README.md  REGRESSION_TRACK_PLAN.md  RESULTS.md  SWEEP_RESULTS.md  TAIL_PRED_PLAN.md  WHOLEGRAPH_ICL_RESULTS.md  ZEROLABEL_RESULTS.md  _common.py  anon_multiclass.py  balanced_rescore.py  crossdomain_graphcls.py  edge_icl.py  fair_node_hard.py  fair_node_pred.py  fm_repr_baseline.py  fusion_kg.py  gilt_icl.py  gilt_smoke_molhiv.py  gnn_baseline.py  gnn_baseline.slurm  gnn_baseline_install.slurm  kg_icl.py  kumo_fair_node.py  kumo_linktest.py  label_curve.py  make_figures.py  make_verbalize_eval.py  mutag_elements.py  no_cheating_demo.md  (+23 more)
eval/results/: crossdom_manifest.json  crossdom_v2_manifest.json  fairnode_manifest.json  labelcurve_hardened_manifest.json  labelcurve_manifest.json  multifamily_scores.json  mutag_elem_manifest.json  probe_datasets.json  sweep_manifest.json  synth_manifest.json  synth_scores.json  zerolabel_manifest.json
examples/: office.py
graphlex/: __init__.py  thresholds.py
graphlex/core/: facts.py
graphlex/verbalize/: render.py
tests/: test_office.py
