[project]
name = "graphlex"
version = "0.0.1"
description = "Deterministic, LLM-interpretable natural-language descriptions of NetworkX graphs (structure and structure x attributes), plus agent skills."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Seth Flaxman" }]
dependencies = ["networkx>=3.0", "numpy>=1.21"]

[project.optional-dependencies]
agent = ["mcp>=1.0"]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["graphlex*"]
